--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,167 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  background-color: rgb(223, 223, 223);
+  background-color: #f6f6f6;
+  z-index: 1;
 }
 
 main {
   padding: 1rem;
   height: 100vh;
+}
+
+.blob {
+  position: absolute;
+  z-index: 1;
+  margin-top: 120px;
+  width: 400px;
+  height: 400px;
+  background-color: #4a4a4a;
+  animation: move-blob 25s infinite alternate;
+  transition: 0.3s cubic-bezier(0.07, 0.8, 0.16, 1);
+}
+
+@keyframes move-blob {
+  from {
+    transform: translate(-10px, -20px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+  to {
+    transform: translate(calc(100vw - 550px), 50px) rotate(90deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 2;
+  background-color: #00bfbf;
+  height: 80px;
+  margin: 2px;
+  border-radius: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  box-shadow: 3px 3px 8px #787878;
+}
+
+nav > h2 {
+  color: #f6f6f6;
+  font-weight: bold;
+  font-family: sans-serif;
+  background-color: transparent;
+  font-size: 34px;
+}
+
+nav > .nav-buttons {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: transparent;
+}
+
+nav > .nav-buttons > .register-button {
+  background-color: #f6f6f6;
+  color: #4a4a4a;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  width: 180px;
+  height: 45px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-right: 5px;
+  transition: 0.5s ease-in-out;
+}
+
+nav > .nav-buttons > .login-button {
+  background-color: transparent;
+  border: 2px solid #f6f6f6;
+  color: #f6f6f6;
+  font-size: 16px;
+  font-weight: bold;
+  width: 180px;
+  height: 45px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-left: 5px;
+  transition: 0.5s ease-in;
+}
+
+nav > .nav-buttons > .register-button:hover,
+nav > .nav-buttons > .login-button:hover {
+  animation: button-animation 0.5s ease-in;
+}
+
+@keyframes button-animation {
+  0% {
+    transform: scale(0.95);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.content {
+  display: flex;
+  height: calc(100vh - 120px);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 22px;
+  margin-bottom: 20px;
+  z-index: 2;
+}
+.content .heading {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
+}
+
+.content .heading .line {
+  text-align: center;
+  display: flex;
+  background-color: transparent;
+  flex-direction: row;
+}
+
+.content .heading .line h1 {
+  background-color: transparent;
+  font-size: 80px;
+  margin: 0;
+  color: #000000;
+  font-family: sans-serif;
+}
+
+.content .heading .line .colored {
+  background-color: transparent;
+  color: #00bfbf;
+  margin-right: 20px;
+}
+
+.content .images {
+  background-color: #00bfbf;
+  border-radius: 20px;
+  height: 500px;
+  width: 1200px;
+  box-shadow: 3px 3px 8px #787878;
+}
+
+.content .images img {
+  width: 100px;
+}
+
+.dunno {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-color: red;
 }
