--- a/public/style.css
+++ b/public/style.css
@@ -34,9 +34,9 @@ main {
 
 nav {
   display: flex;
+  z-index: 2;
   align-items: center;
   justify-content: space-between;
-  z-index: 2;
   background-color: #00bfbf;
   height: 80px;
   margin: 2px;
@@ -109,6 +109,7 @@ nav > .nav-buttons > .login-button:hover {
 }
 
 .content {
+  z-index: 2;
   display: flex;
   height: calc(100vh - 120px);
   flex-direction: column;
@@ -116,7 +117,6 @@ nav > .nav-buttons > .login-button:hover {
   align-items: center;
   margin-top: 22px;
   margin-bottom: 20px;
-  z-index: 2;
 }
 .content .heading {
   margin-bottom: 30px;
@@ -159,9 +159,180 @@ nav > .nav-buttons > .login-button:hover {
   width: 100px;
 }
 
-.dunno {
+/* Authentication page styles */
+.authentication-page {
+  width: 100vw;
+  height: 100vh;
+  background-color: #00bfbf;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.authentication-page .flip-card {
+  position: relative;
+  width: 40%;
+  min-width: 500px;
+  height: 75%;
+  border-radius: 30px;
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.authentication-page .flip-card .flip-card-front,
+.authentication-page .flip-card .flip-card-back {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   position: absolute;
-  width: 500px;
-  height: 500px;
-  background-color: red;
+  backface-visibility: hidden;
+}
+
+.authentication-page .flip-card {
+  transition: transform 0.8s ease-in-out;
+  transform-style: preserve-3d;
+}
+
+/* This is a check */
+.flip-card:hover {
+  transform: rotateY(180deg);
+}
+.authentication-page .flip-card .flip-card-back {
+  transform: rotateY(180deg);
+}
+/* This is a check */
+
+.flip-card-front .input-fields {
+  width: 100%;
+  margin-top: 42px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* will be different */
+.flip-card-back .input-fields {
+  width: 100%;
+  margin-top: 62px;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.flip-card-front h2,
+.flip-card-back h2 {
+  color: #4a4a4a;
+  font-weight: bold;
+  font-family: sans-serif;
+  background-color: transparent;
+  font-size: 48px;
+  text-align: center;
+}
+
+.flip-card-front .input,
+.flip-card-back .input {
+  width: 100%;
+  max-width: 480px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flip-card-front input,
+.flip-card-back input {
+  background-color: #ffffff;
+  border: 2px solid #00bfbf;
+  width: 100%;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: large;
+  padding: 20px;
+}
+
+.flip-card-front input::placeholder,
+.flip-card-back input::placeholder {
+  color: transparent;
+}
+
+.flip-card-front .input label,
+.flip-card-back .input label {
+  width: 100%;
+  font-size: 16px;
+  max-width: 480px;
+  display: block;
+  position: relative;
+  transform: translateY(42px);
+  font-family: sans-serif;
+  font-size: large;
+  color: #4a4a4a;
+  transition: 300ms;
+  pointer-events: none;
+  background-color: transparent;
+  padding-left: 10px;
+}
+
+.flip-card-front .input label:has(+ input:focus),
+.flip-card-front .input label:has(+ input:not(:placeholder-shown)),
+.flip-card-back .input label:has(+ input:focus),
+.flip-card-back .input label:has(+ input:not(:placeholder-shown)) {
+  transform: translateY(-5px);
+}
+
+.flip-card-front .register,
+.flip-card-back .login {
+  background-color: #00bfbf;
+  color: #f6f6f6;
+  font-family: sans-serif;
+  font-size: 20px;
+  border: none;
+  width: 280px;
+  height: 55px;
+  border-radius: 14px;
+  cursor: pointer;
+}
+
+.flip-card-front .register:hover,
+.flip-card-back .login:hover {
+  animation: button-animation 0.5s ease-in;
+}
+
+.flip-card-front .back-to-login,
+.flip-card-back .back-to-register {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: row;
+  margin-top: 35px;
+  margin-bottom: 20px;
+}
+
+.flip-card-front .back-to-login p,
+.flip-card-front .back-to-login a,
+.flip-card-back .back-to-register p,
+.flip-card-back .back-to-register a {
+  font-family: sans-serif;
+  font-size: 18px;
+  color: #4a4a4a;
+}
+
+.flip-card-front .back-to-login a,
+.flip-card-back .back-to-register a {
+  cursor: pointer;
+  margin-left: 8px;
+  text-decoration: underline;
+  color: #00bfbf;
+  text-underline-offset: 3px;
 }
