--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,35 @@ main {
   }
 }
 
+.toast {
+  animation: toast 3s;
+}
+
+@keyframes toast {
+  0% {
+    opacity: 0;
+    display: none;
+  }
+  1% {
+    opacity: 1;
+    transform: scale(1);
+    display: flex;
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.05);
+    display: flex;
+  }
+  80% {
+    opacity: 0;
+    display: flex;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+
 nav {
   display: flex;
   z-index: 2;
