--- a/public/style.css
+++ b/public/style.css
@@ -484,3 +484,88 @@ main {
 .delete-account-button:hover {
   animation: button-animation 0.5s ease-in;
 }
+
+/* Account page */
+.add-post-button-wrapper {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-top: 140px;
+  transform: translateX(-50%);
+}
+.add-post-button {
+  background-color: #00bfbf;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  border: 1px solid #f6f6f6;
+  width: 180px;
+  height: 45px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.add-post-button:hover {
+  animation: button-animation 0.5s ease-in;
+}
+.add-post-form-input {
+  width: 100%;
+  max-width: 480px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 18px;
+}
+.add-post-form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 30px;
+  margin-top: 35px;
+}
+
+.add-post-form-input label {
+  width: 100%;
+  font-size: 16px;
+  max-width: 480px;
+  display: block;
+  position: relative;
+  transform: translateY(42px);
+  font-family: sans-serif;
+  font-size: large;
+  color: #4a4a4a;
+  transition: 300ms;
+  pointer-events: none;
+  background-color: transparent;
+  padding-left: 10px;
+}
+
+.add-post-form-input input,
+.add-post-form-input textarea {
+  background-color: #ffffff;
+  border: 2px solid #00bfbf;
+  width: 100%;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: large;
+  padding: 20px;
+}
+
+.add-post-form-input input::placeholder,
+.add-post-form-input textarea::placeholder {
+  color: transparent;
+}
+
+.add-post-form-input label:has(+ input:focus),
+.add-post-form-input label:has(+ input:not(:placeholder-shown)),
+.add-post-form-input label:has(+ textarea:focus),
+.add-post-form-input label:has(+ textarea:not(:placeholder-shown)) {
+  transform: translateY(-4px);
+}
+
+.close-button-container:hover {
+  animation: button-animation 0.5s ease-in;
+}
