--- a/public/style.css
+++ b/public/style.css
@@ -152,12 +152,17 @@ main {
   background-color: #00bfbf;
   border-radius: 20px;
   height: 500px;
-  width: 1200px;
+  width: 70%;
   box-shadow: 3px 3px 8px #787878;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .content .images img {
-  width: 100px;
+  width: calc(80% / 2);
+  border-radius: 16px;
+  border: 1px solid black;
 }
 
 /* Authentication page styles */
