--- a/public/style.css
+++ b/public/style.css
@@ -120,6 +120,7 @@ main {
 }
 
 .content .heading {
+  margin-top: 20px;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
@@ -151,18 +152,59 @@ main {
 .content .images {
   background-color: #00bfbf;
   border-radius: 20px;
-  height: 500px;
+  margin-top: 20px;
   width: 70%;
   box-shadow: 3px 3px 8px #787878;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  padding: 20px;
 }
 
 .content .images img {
-  width: calc(80% / 2);
+  width: calc(90% / 2);
   border-radius: 16px;
   border: 1px solid black;
+}
+
+@media screen and (max-width: 1200px) {
+  .main {
+    height: unset;
+  }
+  .content {
+    height: max-content;
+    width: 100%;
+  }
+  .content .images {
+    height: max-content;
+    flex-direction: column;
+    width: 70%;
+    padding: 0;
+    padding-top: 20px;
+  }
+  .content .images img {
+    width: 90%;
+    margin-bottom: 20px;
+  }
+
+  .content .heading {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .content .heading .line {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .content .images {
+    width: 95%;
+  }
 }
 
 /* Authentication page styles */
